# forestLib

./: CMakeLists.txt  Package.swift
.github/: cmake.yml
.github/workflows/: cmake.yml  swift.yml
Sources/: CMakeLists.txt
Sources/CppCLITool/: CMakeLists.txt  main.cpp
Sources/ForestLib/: CMakeLists.txt  tree.cpp
Sources/ForestLib/include/: core.hpp  forest.hpp  module.modulemap
Sources/SwiftCLITool/: CMakeLists.txt  main.swift
Sources/SwiftLib/: CMakeLists.txt  library.swift  math.swift
Sources/forestLib/: CMakeLists.txt  forest.cpp  tree.cpp
Sources/forestLib/include/: forest.h  module.modulemap  tree.h  tree.hpp
Sources/swiftCLITool/: CMakeLists.txt  main.swift
Tests/forestLibTests/: forestLibTests.swift
